--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -150,6 +150,7 @@ bind = $mainMod, T, exec, telegram-desktop
 bind = $mainMod, D, exec, discord --enable-features=WaylandWindowDecorations --ozone-platform-hint=auto
 bind = $mainMod, F, exec, firefox 
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod SHIFT, V, exec, $terminal -e sh ~/.local/bin/lvim
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
