new waybar theme

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,preferred,auto,auto
-monitor=,preferred,auto,auto
+monitor=HDMI-A-1,preferred,auto,auto
 
 
 exec-once = waybar & hyprpaper & hypridle
@@ -68,7 +68,7 @@ decoration {
     rounding = 10
 
     blur {
-        enabled = false
+        enabled = true
     }
 
     drop_shadow = false
