--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -127,6 +127,7 @@ device {
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = float, title: Свойства
 windowrulev2 = opacity 1 0.8,class:^thunar
+windowrulev2 = idleinhibit always, fullscreen:1
 
 gestures {
     workspace_swipe = true
