--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,8 +8,8 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,preferred,auto,auto
-monitor=HDMI-A-1,preferred,auto,auto
+monitor=,preffered, auto, 1.6
+monitor=HDMI-A-1,1920x1080@144,auto, 1
 
 
 exec-once = waybar & hyprpaper & hypridle
@@ -194,6 +194,13 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# trigger when the switch is toggled
+bindl=,switch:Lid Switch,exec, hyprlock
+# trigger when the switch is turning on
+bindl=,switch:on:Lid Switch,exec, systemctl suspend
+# trigger when the switch is turning off
+bindl=,switch:off:Lid Switch,exec, hyprlock
 
 debug{
     damage_tracking=2
