--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,8 +8,8 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preffered, auto, 1.6
-monitor=HDMI-A-1,1920x1080@144,auto, 1
+monitor=,preffered, auto, 1.66667
+monitor=HDMI-A-1,1920x1080@144,auto, auto
 
 
 exec-once = waybar & hyprpaper & hypridle
