--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -152,7 +152,7 @@ bind = $mainMod, D, exec, discord --enable-features=WaylandWindowDecorations --o
 bind = $mainMod, F, exec, firefox 
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod SHIFT, V, exec, $terminal -e sh ~/.local/bin/lvim
-
+bind = , Print, exec, grimblast --notify --freeze copysave area ~/Изображения/$(date +%Y-%m-%d_%H-%m-%s).png
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
