--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -151,6 +151,7 @@ bind = $mainMod, T, exec, telegram-desktop
 bind = $mainMod, D, exec, discord --enable-features=WaylandWindowDecorations --ozone-platform-hint=auto
 bind = $mainMod, F, exec, firefox 
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, O, exec, obsidian --enable-features=WaylandWindowDecorations --ozone-platform-hint=wayland
 bind = $mainMod SHIFT, V, exec, $terminal -e sh ~/.local/bin/lvim
 bind = , Print, exec, grimblast --notify --freeze copysave area ~/Изображения/$(date +%Y-%m-%d_%H-%m-%s).png
 # Move focus with mainMod + arrow keys
@@ -158,6 +159,10 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# Brightness
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +5
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 5-
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
