remmina client bind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -151,6 +151,7 @@ bind = $mainMod, T, exec, telegram-desktop
 bind = $mainMod, D, exec, discord --enable-features=WaylandWindowDecorations --ozone-platform-hint=auto
 bind = $mainMod, F, exec, firefox 
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, W, exec, remmina
 bind = $mainMod, O, exec, obsidian --enable-features=WaylandWindowDecorations --ozone-platform-hint=wayland
 bind = $mainMod SHIFT, V, exec, $terminal -e sh ~/.local/bin/lvim
 bind = , Print, exec, grimblast --notify --freeze copysave area ~/Изображения/$(date +%Y-%m-%d_%H-%m-%s).png
